Akeeba Data Compliance 3.1.0
================================================================================
+ Minimum Joomla 4.2, PHP 7.4

Akeeba Data Compliance 3.0.5
================================================================================
# [LOW] PHP 8.1 deprecated notice when checking if FOF is still installed

Akeeba Data Compliance 3.0.4
======================================π==========================================
+ Add Show Inline Help support in component options for Joomla 4.1

Akeeba Data Compliance 3.0.3
================================================================================
~ Updated ATS plugin for ATS version 5 and later
# [LOW] PHP warning when using legacy menu items with view=Options (with an uppercase letter) stored in the database

Akeeba Data Compliance 3.0.2
================================================================================
# [HIGH] Cannot install on Joomla! 4.1
# [HIGH] Unhandled exception when you have turned off email sending in your site's Global Configuration
# [LOW] PHP 8.1 Notice when checking whether the user has agreed to the site's terms

Akeeba Data Compliance 3.0.1
================================================================================
# [LOW] Bootstrap 5.1.2 included in Joomla 4.0.4 broke the CSS for Control Panel icons
# [LOW] Bad grammar “consent with” (sic) instead of “consent to” in COM_DATACOMPLIANCE_OPTIONS_CONSENT_PREFERENCELABEL. Thanks, Peter for the heads up!
# [HIGH] Immediate error on the backend on Windows

Akeeba Data Compliance 3.0.0
================================================================================
! Rewritten as a native Joomla 4 component

Akeeba Data Compliance 2.0.4
================================================================================
+ Use Joomla Privacy plugins when removing users

Akeeba Data Compliance 2.0.3
================================================================================