@@ -1,6 +1,7 @@
 Akeeba Data Compliance 3.1.0
 ================================================================================
 + Minimum Joomla 4.2, PHP 7.4
+- Removed PHP version warnings
 
 Akeeba Data Compliance 3.0.5
 ================================================================================
